# Ssnskar-Word-Editor

./: .eslintrc.cjs  .gitignore  LICENSE  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
electron/: main.cjs  preload.cjs
src/: App.tsx  index.css  vite-env.d.ts
src/components/: ModalRoot.tsx
src/components/DevTools/: DevToolsPanel.tsx
src/components/Dialogs/: AboutDialog.tsx  EquationDialog.tsx  FindReplace.tsx  InsertImage.tsx  InsertLink.tsx  InsertTable.tsx  ShortcutsDialog.tsx  SymbolPicker.tsx
src/components/Editor/: DocumentCanvas.tsx  EditorSurface.tsx
src/components/Ribbon/: Ribbon.tsx  TopBar.tsx
src/components/Ribbon/tabs/: HomeTab.tsx  InsertTab.tsx  LayoutTab.tsx  ReferencesTab.tsx  ReviewTab.tsx  ViewTab.tsx
src/components/Settings/: SettingsModal.tsx
src/components/Sidebar/: SocialSidebar.tsx
src/components/StatusBar/: StatusBar.tsx
src/components/common/: ColorGrid.tsx  Modal.tsx  Popover.tsx  RibbonButton.tsx  RibbonGroup.tsx  Toast.tsx
src/context/: DevContext.tsx  EditorContext.tsx  SettingsContext.tsx  UIContext.tsx
src/core/: docx.ts  editorCommands.ts  fileIO.ts  findReplace.ts  textAnalysis.ts  wasmLoader.ts
src/hooks/: useAutoSave.ts  useFileActions.ts  useKeyboardShortcuts.ts  usePerformanceMonitor.ts
src/types/: index.ts
src/utils/: constants.ts  logger.ts  storage.ts
wasm/: Cargo.toml  build.sh
wasm/src/: lib.rs
